--- a/archive.html
+++ b/archive.html
@@ -6,7 +6,7 @@
     <meta name="viewport" content="width=device-width">
     <title>Interdimensional blog
     </title>
-    <link rel="alternate" href="http://otarola.me/feed.xml" type="application/rss+xml" title="from a wanderer traveler">
+    <link rel="alternate" href="http://blog.otarola.me/feed.xml" type="application/rss+xml" title="from a wanderer traveler">
     <link rel="stylesheet" href="http://fonts.googleapis.com/css?family=Lora:400,700,400italic,700italic|Anonymous+Pro:400,700,400italic,700italic|Merriweather:400,700,300">
     <link rel="stylesheet" href="/css/main.css">
   </head>
@@ -14,7 +14,7 @@
     <header class="header">
       <div class="content-wrap">
         <div class="logo">
-          <h1><a href="http://otarola.me">Interdimensional blog</a></h1>
+          <h1><a href="http://blog.otarola.me">Interdimensional blog</a></h1>
           <p class="description">from a wanderer traveler</p>
         </div>
       </div>
